--- a/styles/resume.css
+++ b/styles/resume.css
@@ -1,373 +1,398 @@
 /* CSS Reset */
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+
 /* Resume Typography */
 html {
-	font-size: 100.01%;
+  font-size: 100.01%;
 }
 
 body {
-	background-color: #DEDEDE;
-	font: normal 0.75em/1.5 "Georgia", "Times New Roman", serif;
-	overflow-x: hidden;
+  background-color: #dedede;
+  font: normal 0.75em/1.5 "Georgia", "Times New Roman", serif;
+  overflow-x: hidden;
 } /*establish 12px font with verticle rhythm*/
 
 /* =header font size */
-h1, h2, h3, h4, h5, h6 {
-	font-family: "Tahoma", "Helvetica", "Droid Sans", sans-serif;
-	letter-spacing: 1px;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Tahoma", "Helvetica", "Droid Sans", sans-serif;
+  letter-spacing: 1px;
 }
 
 h1 {
-	border-bottom: 0.07142855em double #444;
-	font: normal 3.5em/2 "Georgia", sans-serif;
-	text-align: center;
+  border-bottom: 0.07142855em double #444;
+  font: normal 3.5em/2 "Georgia", sans-serif;
+  text-align: center;
 }
 
 h2 {
-	font-size: 1.5em;
-	font-variant: small-caps;
-	letter-spacing: 0.07142855em;
+  font-size: 1.5em;
+  font-variant: small-caps;
+  letter-spacing: 0.07142855em;
 } /* 24px / 16px */
 
-h1, h2 {
-	color: #000;
+h1,
+h2 {
+  color: #000;
 }
 
 h3 {
-	border-bottom: 0.07142855em solid #333;
-	font-size: 1.25em;
-	line-height: 1.42857em;
-	margin-bottom: 0.375em;
-	margin-top: 1.05357em;
-	position: relative;
-}  /* 20px / 16px */
+  border-bottom: 0.07142855em solid #333;
+  font-size: 1.25em;
+  line-height: 1.42857em;
+  margin-bottom: 0.375em;
+  margin-top: 1.05357em;
+  position: relative;
+} /* 20px / 16px */
 
 /* section class inside the div element with the
 class of `resume_skills` for the education section */
 .education {
-	display: block;
-	font-size: 1em;
+  display: block;
+  font-size: 1em;
 }
 
 .education h3 time {
-	font-size: 0.75em;
-	font-weight: normal;
-	line-height: 1.5;
+  font-size: 0.75em;
+  font-weight: normal;
+  line-height: 1.5;
 }
 
 h4 {
-	font-size: 1.1255em;
-	line-height: 1.2857em;
-	margin-bottom: 0.375em;
-	margin-top: 1.0893em;
-}/* 18px / 16px */
+  font-size: 1.1255em;
+  line-height: 1.2857em;
+  margin-bottom: 0.375em;
+  margin-top: 1.0893em;
+} /* 18px / 16px */
 
-h4, h5, h6 {
-	color: #111;
+h4,
+h5,
+h6 {
+  color: #111;
 }
 
 /* =p leading */
 p {
-	margin-bottom: 0.5em;
-	margin-top: 1em;
+  margin-bottom: 0.5em;
+  margin-top: 1em;
 }
 
 p + p {
-	margin-top: 1.5em;
+  margin-top: 1.5em;
 }
 
 p + ul {
-	margin-top: 0.75em;
+  margin-top: 0.75em;
 }
 
-footer p, footer p + p {
-	margin: 0;
+footer p,
+footer p + p {
+  margin: 0;
 }
 
 /* Layout for Resume */
 /* =header display */
-header, footer {
-	clear: both;
+header,
+footer {
+  clear: both;
 }
 
-header h2, header p {
-	padding: 0 40px;
-	width: 510px;
+header h2,
+header p {
+  padding: 0 40px;
+  width: 510px;
 }
 
 header h1 {
-	text-shadow: 2px 3px 2px #999;
+  text-shadow: 2px 3px 2px #999;
 }
 
 header h1 a:hover {
-	color: #0030ff;
+  color: #0030ff;
 }
 
 /* page holder */
 .page {
-	background: #fff;
-	border: 0.07142855em solid #CECECE;
-	margin: 0.35714286em auto 1em;
-	padding-bottom: 1.5em;
-	position: relative;
-	width: 960px;
+  background: #fff;
+  border: 0.07142855em solid #cecece;
+  margin: 0.35714286em auto 1em;
+  padding-bottom: 1.5em;
+  position: relative;
+  width: 960px;
 }
 
 /*h3 {display: inline-block; margin-top: 0; padding-top: 0;}*/
 .time {
-	float: right;
-	font-size: 0.75em;
-	font-weight: normal;
-	margin-top: 0;
-	padding-top: 0;
-	position: absolute;
-	right: 0;
+  float: right;
+  font-size: 0.75em;
+  font-weight: normal;
+  margin-top: 0;
+  padding-top: 0;
+  position: absolute;
+  right: 0;
 } /* 16 / 20 */
 
 /* =ul style */
 ul {
-	margin: 0 2em 0.857em;
+  margin: 0 2em 0.857em;
 }
 
 ul li {
-	list-style-type: square;
-	position: relative;
+  list-style-type: square;
+  position: relative;
 }
 
 .technology li > span {
-	display: none;
+  display: none;
 }
 
 /* =a styles */
-a:link, a:active, a:focus, a:visited, a:hover {
-	color: #444;
-	text-decoration: none;
+a:link,
+a:active,
+a:focus,
+a:visited,
+a:hover {
+  color: #444;
+  text-decoration: none;
 }
 
 @media (min-width: 320px) {
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+    text-shadow: none;
+  }
 
-    html, body {
-		margin: 0;
-		padding: 0;
-		text-shadow: none;
-	}
+  header,
+  header h2,
+  header p,
+  .page,
+  footer {
+    background: #fff;
+    margin: 0 auto;
+    padding: 0;
+    width: 93.75%;
+  }
 
-    header, header h2, header p, .page, footer {
-		background: #fff;
-		margin: 0 auto;
-		padding: 0;
-		width: 93.75%;
-	}
+  header {
+    margin-bottom: 1em;
+  }
 
-    header {
-		margin-bottom: 1em;
-	}
+  header h2,
+  header p {
+    margin-left: 0;
+    padding-left: 0;
+  }
 
-    header h2, header p {
-		margin-left: 0;
-		padding-left: 0;
-	}
+  .page .professional_experience,
+  .page .resume_skills {
+    float: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
 
-    .page .professional_experience, .page .resume_skills {
-		float: none;
-		margin: 0;
-		padding: 0;
-		width: 100%;
-	}
+  .resume_skills a:hover {
+    color: #0030ff;
+  }
 
-	.resume_skills a:hover {
-		color: #0030ff;
-	}
+  b {
+    margin-left: 0.25em;
+  }
 
-	b {
-		margin-left: 0.25em;
-	}
+  .sample-work li,
+  .achievements li {
+    font-size: 1em;
+    line-height: 2;
+    margin: 0.75vh 0;
+  }
 
-	.sample-work li, .achievements li {
-		font-size: 1em;
-		line-height: 2;
-		margin: 0.75vh 0;
-	}
+  article,
+  aside {
+    margin: 0 10px;
+    padding: 0;
+  }
 
-    article, aside {
-		margin: 0 10px;
-		padding: 0;
-	}
+  footer {
+    font-size: inherit !important;
+    margin-bottom: 1em;
+  }
 
-    footer {
-		font-size: inherit !important;
-		margin-bottom: 1em;
-	}
+  .contact-info p {
+    line-height: 2;
+    margin: 0.75vh 0;
+  }
 
-	.contact-info p {
-		line-height: 2;
-		margin: 0.75vh 0;
-	}
+  .footer-nav ul {
+    display: block;
+    margin-left: 0;
+    padding-bottom: 1.25em;
+    padding-top: 0.75em;
+  }
 
-	.footer-nav ul {
-		display: block;
-		margin-left: 0;
-		padding-bottom: 1.25em;
-		padding-top: 0.75em;
-	}
+  .footer-nav li {
+    border-bottom: 0.07142855em dashed;
+    font-size: 1.3em;
+    line-height: 3.5;
+    list-style-type: none;
+    margin: 0 0.5vw;
+  }
 
-	.footer-nav li {
-		border-bottom: 0.07142855em dashed;
-		font-size: 1.3em;
-		line-height: 3.5;
-	    list-style-type: none;
-	    margin: 0 0.5vw;
-	}
+  .footer-nav a {
+    cursor: pointer;
+    padding: 2vh 2vw;
+    text-decoration: none;
+  }
 
-	.footer-nav a {
-		cursor: pointer;
-		padding: 2vh 2vw;
-		text-decoration: none;
-	}
-
-	.footer-nav a:hover {
-	    color: #0030ff;
-	}
+  .footer-nav a:hover {
+    color: #0030ff;
+  }
 }
 
 @media (min-width: 900px) {
+  html,
+  body,
+  .page {
+    border: none !important;
+    color: #444 !important;
+    filter: none !important;
+    margin: 0;
+    padding: 0;
+    text-shadow: none !important;
+  }
 
-    html, body, .page {
-		border: none !important;
-		color: #444 !important;
-		filter: none !important;
-		margin: 0;
-		padding: 0;
-		text-shadow: none !important;
-	}
+  body {
+    background-color: rgb(110, 110, 110) !important;
+  }
 
-    body {
-		background-color: rgb(110,110,110) !important;
-	}
+  .footer-nav li {
+    border-bottom: none;
+  }
 
-	.footer-nav li {
-		border-bottom: none;
-	}
+  .footer-nav li:nth-of-type(1) {
+    margin-left: 0.75rem;
+  }
 
-	.footer-nav li:nth-of-type(1) {
-		margin-left: 0.75rem;
-	}
+  /* page holder */
+  .page {
+    background: #fff;
+    margin: 0.35714286em auto 1em;
+    position: relative;
+    width: 93.75%;
+  } /* 960px / 1024px */
 
-    /* page holder */
-    .page {
-		background: #fff;
-		margin: 0.35714286em auto 1em;
-		position: relative;
-		width: 93.75%;
-	} /* 960px / 1024px */
+  /* 2 columm layout */
+  /* column 1: section/article */
+  .page .professional_experience {
+    float: left;
+    margin-bottom: 0.35714286em;
+    margin-top: 1em;
+    width: 590px;
+  }
 
-  	/* 2 columm layout */
-	/* column 1: section/article */
-	.page .professional_experience {
-		float: left;
-		margin-bottom: 0.35714286em;
-		margin-top: 1em;
-		width: 590px;
-	}
+  /* column 2: div/aside */
+  .page .resume_skills {
+    float: right;
+    margin-top: 1em;
+    width: 365px;
+  }
 
-	/* column 2: div/aside */
-	.page .resume_skills {
-		float: right;
-		margin-top: 1em;
-		width: 365px;
-	}
+  /* layout padding*/
+  article {
+    margin: 0 20px 0 40px;
+    position: relative;
+  }
 
-	/* layout padding*/
-	article {
-		margin: 0 20px 0 40px;
-		position: relative;
-	}
+  aside {
+    margin: 0 40px 0 1.25rem;
+    position: relative;
+  }
 
-	aside {
-		margin: 0 40px 0 1.25rem;
-		position: relative;
-	}
+  aside h2 {
+    margin-bottom: 1.05357em;
+  }
 
-	aside h2 {
-		margin-bottom: 1.05357em;
-	}
+  /* 2 columm layout */
+  /* column 1: */
+  .page .professional_experience {
+    float: left;
+    margin-bottom: 0.35714286em;
+    width: 61.45833%;
+  } /* 590px / 960px */
 
-    /* 2 columm layout */
-    /* column 1: */
-	.page .professional_experience {
-		float: left;
-		margin-bottom: 0.35714286em;
-		width: 61.45833%;
-	} /* 590px / 960px */
+  /* column 2: */
+  .page .resume_skills {
+    float: right;
+    width: 34.375%;
+  } /* 270px / 960px */
 
-    /* column 2: */
-	.page .resume_skills {
-		float: right;
-		width: 34.375%;
-	}  /* 270px / 960px */
+  header p {
+    width: 57.291667%;
+  }
 
-    header p {
-		width: 57.291667%;
-	}
+  b {
+    font-weight: normal;
+    margin-top: -2px;
+    padding-top: 0;
+    position: absolute;
+    right: 0;
+  }
 
-	b {
-		font-weight: normal;
-		margin-top: -2px;
-		padding-top: 0;
-		position: absolute;
-		right: 0;
-	}
+  h3 + p {
+    max-width: 75%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 
-	h3 + p {
-		max-width: 75%;
-		overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-	}
+  /* =footer placement */
+  footer h3 {
+    margin-left: 0.5rem;
+  }
 
-	/* =footer placement */
-	footer h3 {
-		margin-left: 0.5rem;
-	}
+  .contact-info {
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 0.5rem;
+  }
 
-	.contact-info {
-		display: flex;
-		justify-content: flex-start;
-		margin-left: 0.5rem;
-	}
+  .contact-info p:nth-of-type(1) {
+    margin-right: 1.5rem;
+  }
 
-	.contact-info p:nth-of-type(1) {
-		margin-right: 1.5rem;
-	}
+  .footer-nav {
+    width: 100vw;
+  }
 
-	.footer-nav {
-		width: 100vw;
-	}
+  .footer-nav ul {
+    display: flex;
+    justify-content: flex-start;
+    margin-left: -1.5rem;
+    padding-bottom: 1.25rem;
+    padding-top: 0.75rem;
+  }
 
-	.footer-nav ul {
-		display: flex;
-		justify-content: flex-start;
-		margin-left: -1.5rem;
-		padding-bottom: 1.25rem;
-		padding-top: 0.75rem;
-	}
+  .footer-nav li {
+    list-style-type: none;
+    margin: 0.5vw;
+  }
 
-	.footer-nav li {
-	    list-style-type: none;
-	    margin: 0.5vw;
-	}
+  .footer-nav a {
+    cursor: pointer;
+    padding: 2vw;
+    text-decoration: none;
+  }
 
-	.footer-nav a {
-		cursor: pointer;
-		padding: 2vw;
-	    text-decoration: none;
-	}
-
-	.footer-nav a:hover {
-	    color: #0030ff;
-	}
+  .footer-nav a:hover {
+    color: #0030ff;
+  }
 }
